updated button to pointer and hopefully fixed sound on ios

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     background-color: #e6000f;
     color: black;
     margin-top: 25px;
-    width: 500px;
+    width: 430px;
     display: flex;
     border-radius: 10px;   
 }
@@ -81,6 +81,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .brick {
